--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -693,9 +693,60 @@ section {
   display: flex;
   justify-content: center;
 }
-.product-cont-column-one a::after{
+/*product-cont-column  media queary */
+@media (max-width: 540px) {
+  .product-cont-column-one{
+    display: grid;
+   justify-content: space-between;
+   gap: 20px;
+   margin-left: 270px;
+  
+ }
+}
+@media screen and (min-width: 550px) and (max-width: 850px){
+  .product-cont-column-one{
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+   justify-content: space-between;
+   gap: 10px;   
+   margin-left: 220px;
+   overflow: scroll;
+   scrollbar-width: none;
+ }
+ .product-cont-column-one #hidden{
+  display: none;
+ }
+ .card-item{
+  background-color: white;
+  width: 350px;
+  height: auto;
+  display: grid;
+  /* justify-content: space-around; */
+  padding: 10px;
   
 }
+}
+@media screen and (min-width: 855px) and (max-width: 1700px){
+  .product-cont-column-one{
+    display: flex;
+    overflow-x: scroll;
+    scrollbar-width: none;
+   justify-content: space-between;
+   gap: 10px;   
+   margin-left: 230px;
+ }
+ 
+ .card-item{
+  background-color: white;
+  width: 350px;
+  height: auto;
+  display: grid;
+  /* justify-content: space-around; */
+  padding: 10px;
+  
+}
+}
+
 
 
 /*--------------------------------------------------------------
